// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScrollView renders 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 20,
        "paddingHorizontal": 10,
        "paddingTop": 10,
        "paddingVertical": 16,
      }
    }
    noFill={false}
    noPadding={false}
    paddingBottom={20}
    paddingHorizontal={10}
    paddingTop={10}
    paddingVertical={40}
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  />
</View>
`;

exports[`ScrollView renders 2`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 0,
        "paddingHorizontal": 0,
        "paddingTop": 0,
        "paddingVertical": 0,
      }
    }
    noFill={true}
    noPadding={true}
    paddingBottom={20}
    paddingHorizontal={10}
    paddingTop={10}
    paddingVertical={40}
    style={
      Array [
        Object {},
      ]
    }
  />
</View>
`;

exports[`ScrollView renders correctly 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <ScrollView
    contentContainerStyle={
      Object {
        "paddingBottom": 16,
        "paddingHorizontal": 16,
        "paddingTop": 16,
        "paddingVertical": 16,
      }
    }
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  />
</View>
`;
